Updates and timeline
Signed-off-by: Arnaud Porterie <arnaud.porterie@docker.com>

--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,9 @@ social:
   - title: "flickr"
     url: "https://www.flickr.com/arnaudporterie"
 
+collections:
+  - media_timeline
+
 # Background image to be tiled on all pages
 background:
 
