Replace pygments with rouge
Signed-off-by: Arnaud Porterie <arnaud.porterie@docker.com>

--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ background:
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/Los_Angeles
 future:      true
-highlighter: pygments
+highlighter: rouge
 markdown:    kramdown
 gems:
   - jekyll-gist
