--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ disqus_shortname:
 description:      Personal website and blog
 reading_time:     false
 logo:             images/logo.png
+google_analytics: UA-78642707-1
 
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
