--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:            Arnaud Porterie
 disqus_shortname:
 description:      Personal website and blog
 reading_time:     false
-logo:             images/logo.png
+logo:             images/logo_small.png
 google_analytics: UA-78642707-1
 
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
