Fix code formatting
Signed-off-by: Arnaud Porterie (icecrime) <arnaud.porterie@docker.com>

--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ permalink:   /:categories/:title/
 # Amount of post to show on home page
 paginate: 5
 
-syntax_highlighter: coderay
+#syntax_highlighter: coderay
 
 kramdown:
   auto_ids: true
@@ -83,12 +83,21 @@ kramdown:
   entity_output: as_char
   toc_levels: 1..6
 
-  coderay:
-    line_numbers: nil
-    line_numbers_start: 1
-    tab_width: 4
-    bold_every: 10
-    css: class
+  input:          GFM
+  # https://github.com/jekyll/jekyll/pull/4090
+  syntax_highlighter: rouge
+
+  # Rouge Highlighter in Kramdown › http://kramdown.gettalong.org/syntax_highlighter/rouge.html
+  # span, block element options fall back to global
+  syntax_highlighter_opts:
+    # Rouge Options › https://github.com/jneen/rouge#full-options
+    css_class: 'highlight'
+    #line_numbers: true # bad idea, spans don't need linenos and would inherit this option
+    span:
+      line_numbers: false
+    block:
+      line_numbers: true
+      start_line: 1
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
